:lipstick: [#1445] Fixed notification indicator dot being cut off

--- a/src/open_inwoner/scss/components/Header/Header.scss
+++ b/src/open_inwoner/scss/components/Header/Header.scss
@@ -20,6 +20,7 @@ $vm: var(--spacing-large);
     display: inline-block;
     position: relative;
     margin-left: var(--spacing-medium);
+    overflow: visible;
     text-align: center;
     @media (min-width: 768px) {
       top: -6px;
@@ -29,12 +30,11 @@ $vm: var(--spacing-large);
     &__link {
       font-size: var(--font-size-body-small);
       color: var(--color-black);
-      //display: inline-block;
       position: relative;
-      background-color: var(--color-gray);
+      background-color: var(--color-gray-lightest);
       border-radius: var(--border-radius);
-      padding: var(--spacing-small);
-      //min-width: var(--spacing-large);
+      padding: var(--spacing-small) var(--spacing-medium);
+      overflow: initial !important;
       height: var(--spacing-large);
 
       .link__text {
@@ -44,12 +44,13 @@ $vm: var(--spacing-large);
 
     &__dot {
       position: absolute;
-      top: 0px;
-      right: 0px;
-      background-color: var(--color-red);
+      top: -4px;
+      right: -4px;
+      background-color: var(--color-red-notification);
       height: 6px;
       width: 6px;
       display: inline-block;
+      border: 2px solid white;
       border-radius: 100px; // This is big to make sure the corners are rounded properly.
     }
   }
@@ -275,6 +276,11 @@ $vm: var(--spacing-large);
         .primary-navigation__list {
           overflow-x: visible;
           justify-content: flex-end;
+          position: relative;
+
+          &-item > .indicator > .indicator__dot {
+            right: var(--spacing-large);
+          }
         }
       }
     }
@@ -414,6 +420,7 @@ $vm: var(--spacing-large);
         > .primary-navigation__list-item {
         display: flex;
         flex-direction: row;
+        overflow: initial;
 
         &.dropdown-nav__toggle {
           flex-direction: column;
