--- a/src/open_inwoner/scss/components/Header/PrimaryNavigation.scss
+++ b/src/open_inwoner/scss/components/Header/PrimaryNavigation.scss
@@ -176,7 +176,7 @@
       padding: var(--spacing-large) var(--spacing-extra-large);
       border: 1px solid var(--color-primary);
       border-radius: 4px;
-      min-width: 240px;
+      min-width: 250px;
     }
 
     .link {
