--- a/src/open_inwoner/scss/views/App.scss
+++ b/src/open_inwoner/scss/views/App.scss
@@ -31,6 +31,7 @@
   --color-green: #d5e7d4;
   --color-green-dark: #248641;
   --color-red: #e50026;
+  --color-red-notification: #d94100;
   --color-white: #fff;
   --color-yellow: #f8d62d;
   --color-yellow-dark: #cca000;
